<resources>
    <!--app-->
    <string name="app_name">Listen All</string>

    <!--slide menu-->
    <string name="slide_menu_only_wifi">仅 Wifi 联网</string>
    <string name="slide_menu_set_close_time">定时关闭</string>
    <string name="slide_menu_clean_storage">清理占用空间</string>
    <string name="slide_menu_about_app">关于</string>
    <string name="slide_menu_quit">退出</string>
    <string name="slide_menu_open_source_libs">开源框架</string>
    <string name="slide_menu_set_cache_size">设置缓存空间</string>

    <!--main-->
    <string name="main_mine">我的</string>
    <string name="main_discover_music">发现音乐</string>
    <string name="main_my_song_list">我的歌单</string>
    <string name="main_liked_list">收藏歌单</string>
    <string name="main_local_songs">本地歌曲</string>
    <string name="main_recent_play">最近播放</string>
    <string name="main_singer">歌手</string>
    <string name="main_collect">分类歌单</string>
    <string name="main_ranking_list">排行榜</string>
    <string name="main_hot_collect">热门歌单</string>
    <string name="main_new_songs">最新音乐</string>
    <string name="main_like">收藏</string>
    <string name="detail_like">收藏</string>
    <string name="detail_add_to_play">添加到播放</string>
    <string name="detail_download_all">下载</string>
    <string name="detail_play_all">播放全部</string>
    <string name="detail_search_in_scope">搜索歌单内歌曲</string>
    <string name="provider">from Xiami</string>
    <string name="main_search_hint">搜索歌曲/专辑/歌单</string>
    <string name="cancel">取消</string>
    <string name="search_hot">热门搜索</string>
    <string name="collect_detail">歌单详情</string>
    <string name="album_detail">专辑详情</string>
    <string name="no_play_history">没有播放记录</string>
    <string name="singer_korean">韩国</string>
    <string name="singer_japan">日本</string>
    <string name="singer_ea">欧美</string>
    <string name="singer_cn">华语</string>
    <string name="all">全部</string>
    <string name="main_artist_list">歌手列表</string>
    <string name="shuffle_all">随机播放全部</string>
    <string name="ranking_official">平台官方榜</string>
    <string name="ranking_global">全球榜</string>
    <string name="loading">正在加载…</string>
    <string name="load_failed">加载失败，点击重试</string>

    <!--provider-->
    <string name="provider_xiami">虾米音乐</string>
    <string name="provider_qq">QQ音乐</string>
    <string name="provider_netease">网易云音乐</string>
    <string name="play_has_added_to_cur_list">已添加到当前播放列表</string>
    <string name="play_has_set_to_next">已添加到下一首</string>
    <string name="liked">收藏成功</string>
    <string name="unliked">已取消收藏</string>
    <string name="no_songs_to_play">没有歌曲可以播放</string>
    <string name="add_play_next">下一首播放</string>
    <string name="add_to_collect">添加到歌单</string>
    <string name="dialog_artist">歌手：</string>
    <string name="dialog_album">专辑：</string>
    <string name="delete">删除</string>
    <string name="save_cover">保存封面图</string>
    <string name="song_already_in_playlist">当前歌曲已在播放列表</string>
    <string name="song_not_available">当前歌曲无法播放，请尝试其他平台</string>
    <string name="create_collect">新建歌单</string>
    <string name="edit_collect">编辑歌单信息</string>

    <!--filter category-->
    <array name="filter_language">
        <item>华语</item>
        <item>欧美</item>
        <item>日语</item>
        <item>韩语</item>
        <item>粤语</item>
        <item>小语种</item>
    </array>
    <array name="filter_style">
        <item>流行</item>
        <item>摇滚</item>
        <item>民谣</item>
        <item>电子</item>
        <item>舞曲</item>
        <item>说唱</item>
        <item>轻音乐</item>
        <item>爵士</item>
        <item>乡村</item>
        <item>R&amp;B</item>
        <item>古典</item>
        <item>民族</item>
        <item>英伦</item>
        <item>金属</item>
        <item>朋克</item>
        <item>蓝调</item>
        <item>雷鬼</item>
        <item>世界音乐</item>
        <item>拉丁</item>
        <item>另类/独立</item>
        <item>New Age</item>
        <item>古风</item>
        <item>后摇</item>
    </array>
    <array name="filter_scene">
        <item>清晨</item>
        <item>夜晚</item>
        <item>学习</item>
        <item>工作</item>
        <item>午休</item>
        <item>下午茶</item>
        <item>地铁</item>
        <item>驾车</item>
        <item>运动</item>
        <item>旅行</item>
        <item>散步</item>
        <item>酒吧</item>
    </array>
    <array name="filter_mood">
        <item>怀旧</item>
        <item>清新</item>
        <item>浪漫</item>
        <item>性感</item>
        <item>伤感</item>
        <item>治愈</item>
        <item>放松</item>
        <item>孤独</item>
        <item>感动</item>
        <item>兴奋</item>
        <item>快乐</item>
        <item>安静</item>
        <item>思念</item>
    </array>
    <array name="global_ranking">
        <item>Billboard全球榜</item>
        <item>UK周榜</item>
        <item>日本Oricon周榜</item>
    </array>
</resources>
