<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:gravity="center_vertical"
        android:text="凡人歌"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />
    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <!--下一首播放-->
    <LinearLayout
        android:id="@+id/add_play_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_add_play_next"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_play_next"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <!--添加到歌单-->
    <LinearLayout
        android:id="@+id/add_to_collect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_add_to_collect"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_to_collect"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <!--下载-->
    <LinearLayout
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_main_download"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/detail_download_all"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <!--保存封面图-->
    <LinearLayout
        android:id="@+id/save_cover"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_cover"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/save_cover"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />
    <!--歌手-->
    <LinearLayout
        android:id="@+id/artist_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_main_singer"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:text="@string/dialog_artist"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="五月天"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <!--专辑-->
    <LinearLayout
        android:id="@+id/album_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_main_all_music"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_album"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="凡人歌"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

    <!--删除-->
    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delete"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </LinearLayout>

    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDivider" />

</LinearLayout>