<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--banner-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--banner-->
            <com.youth.banner.Banner
                android:id="@+id/main_banner"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                app:delay_time="5000"
                app:is_auto_play="true" />

            <!--button bar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!--歌手-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_main_android" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/main_singer"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/main_tab_btn_text_size" />
                </LinearLayout>
                <!--歌单-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_main_android" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/main_collect"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/main_tab_btn_text_size" />
                </LinearLayout>
                <!--排行-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_main_android"
                        tools:ignore="ContentDescription" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/main_ranking_list"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/main_tab_btn_text_size" />
                </LinearLayout>

            </LinearLayout>


            <!--热门歌单-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_hot_collect"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/slide_menu_text_size"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/main_btn_more_collect"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_enter"
                    tools:ignore="ContentDescription" />

                <GridView
                    android:id="@+id/main_hot_collects"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_below="@id/main_btn_more_collect"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:stretchMode="columnWidth"
                    tools:ignore="NestedScrolling">

                </GridView>
            </RelativeLayout>
            <!--最新音乐-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/main_new_songs"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/slide_menu_text_size"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/main_btn_more_albums"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_enter"
                    tools:ignore="ContentDescription" />

                <GridView
                    android:id="@+id/main_new_albums"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_below="@id/main_btn_more_albums"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:numColumns="3"
                    android:scrollbars="none"
                    tools:ignore="NestedScrolling">

                </GridView>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>